# braintrust-claude-plugin

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  EVAL_RESULTS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
evals/: README.md  __init__.py  braintrust_api.py  eval_datasets.py  eval_docs_search.py  eval_e2e_eval_improve.py  eval_e2e_log_fetch.py  eval_experiments.py  eval_log_querying.py  pyproject.toml  scorers.py  test_braintrust_api.py
plugins/braintrust/: .mcp.json
plugins/braintrust/.claude-plugin/: plugin.json
plugins/braintrust/skills/troubleshoot-braintrust-mcp/: SKILL.md
plugins/trace-claude-code/: braintrust.env.example  setup.sh
plugins/trace-claude-code/.claude-plugin/: plugin.json
plugins/trace-claude-code/hooks/: common.sh  copilot-hooks.json  copilot_events.sh  hooks.json  post_tool_use.sh  pre_tool_use.sh  session_end.sh  session_start.sh  stop_hook.sh  subagent_start.sh  subagent_stop.sh  user_prompt_submit.sh
plugins/trace-claude-code/hooks/adapters/: claude.sh  copilot.sh
skill/: SKILL.md
skill/scripts/: query_logs.py  run_eval.py
skills/trace-claude-code/: setup.sh
skills/trace-claude-code/hooks/: common.sh
skills/using-braintrust/: SKILL.md
skills/using-braintrust/scripts/: _common.py  list_projects.py  log_data.py  query_logs.py  run_eval.py
