[project]
name = "braintrust-skill"
version = "0.1.0"
description = "Braintrust skill and evaluations"
requires-python = ">=3.12"
# Dependencies for running evals
dependencies = [
    "anthropic>=0.40.0",
    "braintrust>=0.0.182",
    "autoevals>=0.0.109",
    "claude-agent-sdk>=0.1.0",
    "claude-agent-sdk>=0.1.18",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
    "ty>=0.0.1a7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.rules]
unresolved-import = "ignore"  # Each subpackage has its own venv
